--- a/apps/web/src/features/tools/raid-calculator/RaidCalculatorWorkbenchFrame.css
+++ b/apps/web/src/features/tools/raid-calculator/RaidCalculatorWorkbenchFrame.css
@@ -23,7 +23,7 @@
   position: absolute;
   top: 17.5%; 
   left: 25%;
-  width: 49.5%;
+  width: 51.5%;
   height: 54.5%;
   background-color: rgba(30, 33, 28, 0.95);
   border-radius: 4px;
